fix alignment/overflow issues

--- a/src/Info/info.css
+++ b/src/Info/info.css
@@ -1,7 +1,7 @@
 .infoContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     height: available;
     flex: 2;
     background-color: black;
