--- a/src/Info/wrapper/withWrapper.css
+++ b/src/Info/wrapper/withWrapper.css
@@ -1,5 +1,5 @@
 .wrapper{
-    margin-left: 100px;
+    margin-left: 79px;
     margin-top: 30px;
     margin-bottom: 30px;
 }
